--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -203,27 +203,6 @@ architects_palette:dark_oak_boards
 architects_palette:crimson_boards
 architects_palette:warped_boards
 architects_palette:twisted_boards
-architects_palette:dripstone_bricks
-architects_palette:dripstone_brick_slab
-architects_palette:dripstone_brick_vertical_slab
-architects_palette:dripstone_brick_stairs
-architects_palette:dripstone_pillar
-architects_palette:chiseled_dripstone
-architects_palette:calcite_bricks
-architects_palette:calcite_brick_slab
-architects_palette:calcite_brick_vertical_slab
-architects_palette:calcite_brick_stairs
-architects_palette:calcite_pillar
-architects_palette:chiseled_calcite
-architects_palette:tuff_bricks
-architects_palette:tuff_brick_slab
-architects_palette:tuff_brick_stairs
-architects_palette:tuff_brick_vertical_slab
-architects_palette:tuff_pillar
-architects_palette:chiseled_tuff
-architects_palette:dripstone_brick_wall
-architects_palette:calcite_brick_wall
-architects_palette:tuff_brick_wall
 supplementaries:pancake
 fluid:decorative_blocks:thatch
 quark:bamboo_mat
@@ -256,24 +235,6 @@ woodworks:dark_oak_trapped_chest
 woodworks:mangrove_trapped_chest
 woodworks:crimson_trapped_chest
 woodworks:warped_trapped_chest
-decorative_blocks:oak_seat
-decorative_blocks:oak_support
-decorative_blocks:birch_seat
-decorative_blocks:birch_support
-decorative_blocks:spruce_seat
-decorative_blocks:spruce_support
-decorative_blocks:acacia_seat
-decorative_blocks:acacia_support
-decorative_blocks:jungle_seat
-decorative_blocks:jungle_support
-decorative_blocks:dark_oak_seat
-decorative_blocks:dark_oak_support
-decorative_blocks:mangrove_seat
-decorative_blocks:mangrove_support
-decorative_blocks:crimson_seat
-decorative_blocks:crimson_support
-decorative_blocks:warped_seat
-decorative_blocks:warped_support
 decorative_blocks:bar_panel
 decorative_blocks:lattice
 decorative_blocks:stone_pillar
@@ -286,15 +247,6 @@ another_furniture:dark_oak_shelf
 another_furniture:mangrove_shelf
 another_furniture:crimson_shelf
 another_furniture:warped_shelf
-another_furniture:oak_shutter
-another_furniture:spruce_shutter
-another_furniture:birch_shutter
-another_furniture:acacia_shutter
-another_furniture:jungle_shutter
-another_furniture:dark_oak_shutter
-another_furniture:mangrove_shutter
-another_furniture:crimson_shutter
-another_furniture:warped_shutter
 another_furniture:oak_bench
 another_furniture:spruce_bench
 another_furniture:jungle_bench
@@ -321,38 +273,6 @@ another_furniture:pink_tall_stool
 another_furniture:gray_tall_stool
 another_furniture:light_gray_tall_stool
 another_furniture:lime_tall_stool
-another_furniture:brown_sofa
-another_furniture:green_sofa
-another_furniture:red_sofa
-another_furniture:black_sofa
-another_furniture:light_blue_sofa
-another_furniture:yellow_sofa
-another_furniture:lime_sofa
-another_furniture:pink_sofa
-another_furniture:gray_sofa
-another_furniture:light_gray_sofa
-another_furniture:white_sofa
-another_furniture:cyan_sofa
-another_furniture:purple_sofa
-another_furniture:orange_sofa
-another_furniture:magenta_sofa
-another_furniture:blue_sofa
-create:oak_window
-create:oak_window_pane
-create:spruce_window_pane
-create:spruce_window
-create:birch_window
-create:birch_window_pane
-create:jungle_window_pane
-create:jungle_window
-create:acacia_window
-create:acacia_window_pane
-create:dark_oak_window_pane
-create:dark_oak_window
-create:crimson_window
-create:crimson_window_pane
-create:warped_window_pane
-create:warped_window
 supplementaries:crank
 supplementaries:crystal_display
 supplementaries:safe
@@ -366,5 +286,8 @@ v_slab_compat:malum/vertical_soulwood_planks_vertical_slab
 v_slab_compat:malum/vertical_runewood_planks_vertical_slab
 hexcasting:creative_unlocker
 architects_palette:nether_brass_chain
-decorative_blocks:chain
 quark:chute
+suppsquared:tiny_potato
+architects_palette:dripstone_pillar
+architects_palette:calcite_pillar
+architects_palette:tuff_pillar
