--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,7 +1,7 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Sat Mar 25 03:29:08 PST 2023
+#Sat Mar 25 12:18:25 PST 2023
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=32
 shaderPack=ComplementaryReimagined_r2.0.3.zip
-enableShaders=true
+enableShaders=false
