--- a/config/allurement-common.toml
+++ b/config/allurement-common.toml
@@ -98,8 +98,8 @@
 
 	[tweaks.level_scaling]
 		#Remove the amount of experience per level increasing (experimental)
-		"Remove level scaling" = true
+		"Remove level scaling" = false
 		#The amount of experience per level, if level scaling is removed (experimental)
 		#Range: > 0
-		"Experience per level" = 20
+		"Experience per level" = 50
 
