--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -52,5 +52,6 @@ malum:spirit_transmutation
 quark:influence
 waystones:warp_plate
 woodworks:sawing
-homespun:evaporating
-homespun:tub_crushing
+brewinandchewin:fermenting
+brewinandchewin:flaxen_cheese_ripening
+brewinandchewin:scarlet_cheese_ripening
