--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -291,3 +291,95 @@ suppsquared:tiny_potato
 architects_palette:dripstone_pillar
 architects_palette:calcite_pillar
 architects_palette:tuff_pillar
+createdeco:worn_bricks_slab_vert
+createdeco:worn_long_bricks_slab_vert
+createdeco:worn_brick_tiles_slab_vert
+createdeco:worn_short_bricks_slab_vert
+createdeco:cracked_worn_bricks_slab_vert
+createdeco:cracked_worn_brick_tiles_slab_vert
+createdeco:cracked_worn_long_bricks_slab_vert
+createdeco:mossy_worn_bricks_slab_vert
+createdeco:cracked_worn_short_bricks_slab_vert
+createdeco:mossy_worn_brick_tiles_slab_vert
+createdeco:cracked_red_long_bricks_slab_vert
+createdeco:cracked_red_short_bricks_slab_vert
+createdeco:mossy_worn_long_bricks_slab_vert
+createdeco:mossy_worn_short_bricks_slab_vert
+createdeco:mossy_red_bricks_slab_vert
+createdeco:mossy_red_long_bricks_slab_vert
+createdeco:red_bricks_slab_vert
+createdeco:mossy_red_brick_tiles_slab_vert
+createdeco:red_brick_tiles_slab_vert
+createdeco:red_long_bricks_slab_vert
+createdeco:mossy_red_short_bricks_slab_vert
+createdeco:dean_brick_tiles_slab_vert
+createdeco:red_short_bricks_slab_vert
+createdeco:dean_bricks_slab_vert
+createdeco:cracked_red_bricks_slab_vert
+createdeco:cracked_red_brick_tiles_slab_vert
+createdeco:dean_long_bricks_slab_vert
+createdeco:dean_short_bricks_slab_vert
+createdeco:scarlet_bricks_slab_vert
+createdeco:mossy_scarlet_brick_tiles_slab_vert
+createdeco:cracked_pearl_long_bricks_slab_vert
+createdeco:blue_short_bricks_slab_vert
+createdeco:dusk_bricks_slab_vert
+createdeco:mossy_dusk_brick_tiles_slab_vert
+createdeco:copper_sheet_slab_vert
+createdeco:zinc_sheet_slab_vert
+createdeco:mossy_dusk_long_bricks_slab_vert
+createdeco:dusk_brick_tiles_slab_vert
+createdeco:cracked_blue_bricks_slab_vert
+createdeco:cracked_pearl_short_bricks_slab_vert
+createdeco:mossy_scarlet_long_bricks_slab_vert
+createdeco:scarlet_brick_tiles_slab_vert
+createdeco:cracked_dean_bricks_slab_vert
+createdeco:cracked_dean_brick_tiles_slab_vert
+createdeco:cracked_dean_long_bricks_slab_vert
+createdeco:cracked_dean_short_bricks_slab_vert
+createdeco:mossy_dean_bricks_slab_vert
+createdeco:mossy_dean_brick_tiles_slab_vert
+createdeco:mossy_dean_long_bricks_slab_vert
+createdeco:mossy_dean_short_bricks_slab_vert
+createdeco:scarlet_long_bricks_slab_vert
+createdeco:scarlet_short_bricks_slab_vert
+createdeco:cracked_scarlet_bricks_slab_vert
+createdeco:cracked_scarlet_brick_tiles_slab_vert
+createdeco:cracked_scarlet_long_bricks_slab_vert
+createdeco:cracked_scarlet_short_bricks_slab_vert
+createdeco:mossy_scarlet_bricks_slab_vert
+createdeco:mossy_scarlet_short_bricks_slab_vert
+createdeco:mossy_pearl_bricks_slab_vert
+createdeco:cracked_blue_brick_tiles_slab_vert
+createdeco:dusk_long_bricks_slab_vert
+createdeco:mossy_dusk_short_bricks_slab_vert
+createdeco:gold_sheet_slab_vert
+createdeco:dusk_short_bricks_slab_vert
+createdeco:cracked_blue_long_bricks_slab_vert
+createdeco:mossy_pearl_brick_tiles_slab_vert
+createdeco:pearl_bricks_slab_vert
+createdeco:pearl_brick_tiles_slab_vert
+createdeco:mossy_pearl_long_bricks_slab_vert
+createdeco:cracked_blue_short_bricks_slab_vert
+createdeco:cracked_dusk_bricks_slab_vert
+createdeco:netherite_sheet_slab_vert
+createdeco:andesite_sheet_slab_vert
+createdeco:cracked_dusk_brick_tiles_slab_vert
+createdeco:mossy_blue_bricks_slab_vert
+createdeco:mossy_pearl_short_bricks_slab_vert
+createdeco:pearl_long_bricks_slab_vert
+createdeco:pearl_short_bricks_slab_vert
+createdeco:cracked_pearl_bricks_slab_vert
+createdeco:cracked_pearl_brick_tiles_slab_vert
+createdeco:blue_bricks_slab_vert
+createdeco:blue_brick_tiles_slab_vert
+createdeco:blue_long_bricks_slab_vert
+createdeco:mossy_blue_brick_tiles_slab_vert
+createdeco:mossy_blue_long_bricks_slab_vert
+createdeco:mossy_blue_short_bricks_slab_vert
+createdeco:brass_sheet_slab_vert
+createdeco:cracked_dusk_long_bricks_slab_vert
+createdeco:cracked_dusk_short_bricks_slab_vert
+createdeco:cast_iron_sheet_slab_vert
+createdeco:iron_sheet_slab_vert
+createdeco:mossy_dusk_bricks_slab_vert
