--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -9,11 +9,13 @@ Autumnity
 Bartering Station
 Berry Good
 Blåhaj - Reforged
+Brewin' and Chewin'
 Buzzier Bees
 Chalk
 Clayworks
 Collector's Reap
 Create
+Create Deco
 Customizable Elytra
 Decorative Blocks
 Domestication Innovation
@@ -50,4 +52,3 @@ Vertical Slabs Compat
 Waystones
 Windswept
 Woodworks
-Homespun
