--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -117,7 +117,7 @@
 	"Leaf Carpet" = false
 	"Japanese Palette" = true
 	"Industrial Palette" = true
-	"Hollow Logs" = false
+	"Hollow Logs" = true
 	Hedges = true
 	Grate = true
 	"Gold Bars" = true
@@ -165,6 +165,12 @@
 	[building.thatch]
 		#Allowed values: [0,1]
 		"Fall Damage Multiplier" = 0.5
+		#This feature disables itself if any of the following mods are loaded: 
+		# - goated
+		# - environmental
+		#This is done to prevent content overlap.
+		#You can turn this on to force the feature to be loaded even if the above mods are also loaded.
+		"Ignore Anti Overlap" = false
 
 	[building.rope]
 		#Set to true to allow ropes to move Tile Entities even if Pistons Push TEs is disabled.
@@ -441,8 +447,10 @@
 		"Deepslate Tweak Needs Haste2" = true
 		#Master Librarians will offer to exchange Ancient Tomes, provided you give them a max-level Enchanted Book of the Tome's enchantment too.
 		"Librarians Exchange Ancient Tomes" = true
-		#Also applies a random curse along each book
+		#Applying a tome will also randomly curse your item
 		"Curse Gear" = false
+		#Allows combining tomes with normal books
+		"Combine With Books" = true
 
 	[tools.ambient_discs]
 		"Drop On Spider Kill" = true
@@ -1214,12 +1222,12 @@
 		"Ancient City Loot Quality" = 1
 
 	[world.glimmering_weald]
-		#Experimental, dont change if you dont know what you are doing. Weirdness min value from which biome will spawn. Decreasing will make biome appear more often
-		#Allowed values: [-2,2]
-		"Min Weirdness Range" = 1.5499999523162842
-		#Experimental, dont change if you dont know what you are doing. Weirdness max value until which biome will spawn. Increasing will make biome appear more often
+		#Experimental, dont change if you dont know what you are doing. Depth max value until which biome will spawn. Increasing will make biome appear more often
 		#Allowed values: [-2,2]
 		"Max Weirdness Range" = 2.0
+		#Experimental, dont change if you dont know what you are doing. Depth min value from which biome will spawn. Decreasing will make biome appear more often
+		#Allowed values: [-2,2]
+		"Min Depth Range" = 1.5499999523162842
 
 [mobs]
 	Wraith = true
